fix(combobox): update bottom border color to align with spec (#898)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

<!-- Please check the one that applies to this PR using "x". -->

- [X] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

<!-- Please describe the current behavior that you are modifying, or
link to a relevant issue. -->

Issue Number: N/A

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [X] No

<!-- If this PR contains a breaking change, please describe the impact
and migration path for existing applications below. -->

## Other information

---------

--- a/projects/angular/src/forms/combobox/_properties.combobox.scss
+++ b/projects/angular/src/forms/combobox/_properties.combobox.scss
@@ -7,6 +7,7 @@
 @use '../../utils/variables/variables';
 @use 'variables.combobox' as combobox-variables;
 @use '../../popover/dropdown/variables.dropdown' as dropdown-variables;
+@use '../styles/variables.forms' as forms-variables;
 
 @include mixins.exports('combobox.properties') {
   @if variables.$clr-use-custom-properties == true {
@@ -17,6 +18,7 @@
       --clr-combobox-min-height: #{combobox-variables.$clr-combobox-min-height};
       --clr-combobox-min-width: #{combobox-variables.$clr-combobox-min-width};
       --clr-combobox-border-color: #{combobox-variables.$clr-combobox-border-color};
+      --clr-combobox-border-bottom-color: #{forms-variables.$clr-forms-border-color};
       --clr-combobox-border-radius: #{combobox-variables.$clr-combobox-border-radius};
       --clr-combobox-input-background-color: #{combobox-variables.$clr-combobox-input-background-color};
       --clr-combobox-pill-background-color: #{combobox-variables.$clr-combobox-pill-background-color};
